# ai_experiment_project

./: .gitignore  README.md  autorun-tune.sh  configure.sh  main.ipynb  pyproject.toml  trial_logs.csv
scripts/: convert_hf.py  destroy_distributed.py  download_dataset.py  eval.sh  launch_distributed.py  preload_cache.sh  preload_cache_hf.sh  preload_dataset.sh  train.sh  tune.sh
src/aie_project/aihub_helper/: __init__.py  helper.py  image_utils.py  models.py  utils.py
src/aie_project/dataset_helper/: __init__.py  conversion.py  image_utils.py  loader.py  utils.py
src/aie_project/dataset_helper/models/: __init__.py  image_classification.py  object_detection.py  original.py
src/aie_project/model/: __init__.py  configs.py
src/aie_project/training/: __init__.py  callbacks.py  configs.py  constants.py  custom_trainer.py  data_augmentations.py  dataset_utils.py  metrics.py  models.py  train.py  train_utils.py  tune.py  tune_utils.py  utils.py
